--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="styles2.css">
 <link rel="icon" href="icon.jpg" type="image/jpg">
-<title>English for construction industry</title>
 </head>
 <body>
 
@@ -24,9 +23,11 @@
 <script src="main2.js"></script>
 <!-- Thêm dòng chữ vào cuối trang web -->
 <footer>Trang Web Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng</footer>
+<h3>Liên hệ: 0867544809</h3>
 </body>
 <div id="notice">
   <h2>Chú ý</h2>
-  <p>Website đang ở giai đoạn demo, tính năng dịch tiếng Việt sang Tiếng Anh chưa hoàn thiện.</p>
+  <p>Website đang ở giai đoạn phát triển , tính năng dịch Tiếng Việt sang Tiếng Anh vẫn chưa hoàn thiện.</p>
+
 </div>
 </html>
