--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 <button id="speak" style="display: none;">Đọc</button>
 <script src="data1.js"></script>
 <script src="main.js"></script> <!-- Link to your JavaScript file -->
+<script src="deviceCheck.js"></script>
+
 <!-- Thêm dòng chữ vào cuối trang web -->
 <footer>Trang Web Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng</footer>
 <h3>Liên hệ: 0867544809</h3>
