--- a/index2.html
+++ b/index2.html
@@ -21,6 +21,7 @@
 
 <script src="data2.js"></script>
 <script src="main2.js"></script>
+<script src="deviceCheck.js"></script>
 <!-- Thêm dòng chữ vào cuối trang web -->
 <footer>Trang Web Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng</footer>
 <h3>Liên hệ: 0867544809</h3>
