--- a/index2.html
+++ b/index2.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="styles2.css">
 <link rel="icon" href="icon.jpg" type="image/jpg">
+<title>English for Construction Industry</title>
 </head>
 <body>
 
