--- a/index2.html
+++ b/index2.html
@@ -23,12 +23,18 @@
 <script src="data2.js"></script>
 <script src="main2.js"></script>
 <script src="deviceCheck.js"></script>
+<div class="menu-btn" onclick="openMenu()">≡</div>
+
+  <div id="menu" style="display: none;">
+    <a href="http://www.ketcaumkpr.id.vn" target="_blank">Trang Web</a>
+  </div>
+
 <!-- Thêm dòng chữ vào cuối trang web -->
-<footer>Trang Web Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng</footer>
-<h3>Liên hệ: 0867544809</h3>
+<footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809 </footer>
+
 </body>
 <div id="notice">
-  <h4>Chú ý</h4>
-  <p>Website đang ở giai đoạn phát triển , tính năng dịch Tiếng Việt sang Tiếng Anh vẫn chưa hoàn thiện.</p>
+  <h4>Chú ý <span class="close-btn" onclick="closeNotice()">X</span></h4>
+  <p>Website đang ở giai đoạn phát triển, tính năng dịch tiếng Anh sang Tiếng Việt vẫn chưa hoàn thiện.</p>
 </div>
 </html>
