--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 <title>English for construction industry</title>
 </head>
 <body>
+  <div class="menu-btn" onclick="openMenu()">≡</div>
 
+  <div id="menu" style="display: none;">
+    <a href="http://www.ketcaumkpr.id.vn" target="_blank">Trang Web</a>
+  </div>
+  
 <h2> English for construction industry </h2>
 
 <select id="language" onchange="changeLanguage()">
@@ -16,20 +21,20 @@
 </select>
 
 <input id="word" type="text">
-<button onclick="lookup()">Dịch</button>
+<button onclick="lookup()">Tra Cứu</button>
 
 <p id="output"></p>
 <button id="speak" style="display: none;">Đọc</button>
 <script src="data1.js"></script>
 <script src="main.js"></script> <!-- Link to your JavaScript file -->
-<script src="deviceCheck.js"></script>
+ <script src="deviceCheck.js"></script>
 
 <!-- Thêm dòng chữ vào cuối trang web -->
-<footer>Trang Web Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng</footer>
-<h3>Liên hệ: 0867544809</h3>
+<footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809</footer>
+
 </body>
 <div id="notice">
-  <h4>Chú ý</h4>
+  <h4>Chú ý <span class="close-btn" onclick="closeNotice()">X</span></h4>
   <p>Website đang ở giai đoạn phát triển, tính năng dịch tiếng Anh sang Tiếng Việt vẫn chưa hoàn thiện.</p>
 </div>
 </html>
