--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <div id="menu" style="display: none;">
     <a href="http://www.ketcaumkpr.id.vn" target="_blank">Trang Web</a>
+    <a href="index3.html" target="_blank">Từ Vựng</a>
   </div>
   
 <h2> English for construction industry </h2>
