--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
 
   <div id="menu" style="display: none;">
     <a href="http://www.ketcaumkpr.id.vn" target="_blank">Trang Web</a>
+    <a href="index3.html" target="_blank">Từ Vựng</a>
   </div>
 
 <!-- Thêm dòng chữ vào cuối trang web -->
