--- a/index2.html
+++ b/index2.html
@@ -36,6 +36,6 @@
 </body>
 <div id="notice">
   <h4>Chú ý <span class="close-btn" onclick="closeNotice()">X</span></h4>
-  <p>Website đang ở giai đoạn phát triển, tính năng dịch tiếng Anh sang Tiếng Việt vẫn chưa hoàn thiện.</p>
+  <p>Website đang ở giai đoạn phát triển, tính năng dịch tiếng Việt sang Tiếng Anh vẫn chưa hoàn thiện.</p>
 </div>
 </html>
