--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 <input id="word" type="text">
 <button onclick="lookup()">Tra Cứu</button>
 
+<div id="suggestionBox"></div> <!-- Suggestion box -->
+
 <p id="output"></p>
 <button id="speak" style="display: none;">Đọc</button>
 <script src="data1.js"></script>
 <script src="main.js"></script> <!-- Link to your JavaScript file -->
- <script src="deviceCheck.js"></script>
+<script src="deviceCheck.js"></script>
 
 <!-- Thêm dòng chữ vào cuối trang web -->
 <footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809</footer>
