--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,8 @@
 
 <input id="word" type="text">
 <button onclick="lookup()">Tra cứu</button>
+<div id="suggestionBox"></div> <!-- Suggestion box -->
+
 
 <p id="output"></p>
 
