--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
 
 <script src="data2.js"></script>
 <script src="main2.js"></script>
+<script src="main3.js"></script>
 <script src="deviceCheck.js"></script>
 <div class="menu-btn" onclick="openMenu()">≡</div>
 
