--- a/index2.html
+++ b/index2.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" type="text/css" href="styles2.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="icon" href="icon.jpg" type="image/jpg">
 <title>English for Construction Industry</title>
 </head>
 <body>
+  <div class="menu-btn" onclick="openMenu()">≡</div>
+
+  <div id="menu" style="display: none;">
+    <a href="http://www.ketcaumkpr.id.vn" target="_blank">Trang Web</a>
+    <a href="index3.html" target="_blank">Từ Vựng</a>
+  </div>
 
 <h2>English for construction industry</h2>
 
@@ -24,14 +30,11 @@
 
 <script src="data2.js"></script>
 <script src="main2.js"></script>
-<script src="main3.js"></script>
+<script src="main4.js"></script>
 <script src="deviceCheck.js"></script>
-<div class="menu-btn" onclick="openMenu()">≡</div>
 
-  <div id="menu" style="display: none;">
-    <a href="http://www.ketcaumkpr.id.vn" target="_blank">Trang Web</a>
-    <a href="index3.html" target="_blank">Từ Vựng</a>
-  </div>
+
+
 
 <!-- Thêm dòng chữ vào cuối trang web -->
 <footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809 </footer>
