--- a/index3.html
+++ b/index3.html
@@ -17,6 +17,7 @@
 
     <script src="data3.js"></script>
     <script src="main4.js"></script>
+    <script src="main3.js"></script>
     <script src="deviceCheck.js"></script>
     <footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809</footer>
     <div id="notice">
