--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
     <footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809</footer>
     <div id="notice">
         <h4>Chú ý <span class="close-btn" onclick="closeNotice()">X</span></h4>
-        <p>Website đang ở giai đoạn phát triển, </p>
+        <p>Website đang ở giai đoạn phát triển,Chưa thể đọc được tiếng Việt và phát âm Tiếng Anh có thể chưa chuẩn. </p>
       </div>
 </body>
 </html>
