--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
 
 <p id="output"></p>
 <button id="speak" style="display: none;">Đọc</button>
-<script src="data1.js"></script>
-<script src="main.js"></script> 
-<script src="main4.js"></script> <!-- Link to your JavaScript file -->
-<script src="deviceCheck.js"></script>
 
 <!-- Thêm dòng chữ vào cuối trang web -->
 <footer> Minh Khoa, Năm 4 Chuyên Ngành Xây Dựng - Liên hệ: 0867544809</footer>
 
-</body>
+<script src="data1.js"></script>
+<script src="main.js"></script>
+<script src="main4.js"></script> <!-- Link to your JavaScript file -->
+<script src="deviceCheck.js"></script>
+<script src="main6.js"></script>
+
 <div id="notice">
   <h4>Chú ý <span class="close-btn" onclick="closeNotice()">X</span></h4>
   <p>Website đang ở giai đoạn phát triển, tính năng dịch tiếng Anh sang Tiếng Việt vẫn chưa hoàn thiện.</p>
 </div>
+
+</body>
 </html>
