--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <script src="main4.js"></script> <!-- Link to your JavaScript file -->
 <script src="deviceCheck.js"></script>
 <script src="main6.js"></script>
+<script src="main7.js"></script>
 
 <div id="notice">
   <h4>Chú ý <span class="close-btn" onclick="closeNotice()">X</span></h4>
